# sparv-bert-neighbour-plugin

./: .bumpversion.cfg  .gitignore  Justfile  Makefile  README.md  cliff.toml  pyproject.toml  ruff.toml
.github/workflows/: check.yml  ci.yml  release-kb-bert.yml  release.yml  scheduled.yml  test.yml
assets/hello-bert-mask/: config.yaml
examples/hello-bert-mask/: config.yaml
examples/word-prediction--kb-bert/: Makefile  config.yaml
examples/word-prediction-kb-bert/: config.yaml
src/bert_neighbour/: __init__.py
src/sparv_bert_mask/: __init__.py
src/sparv_bert_neighbour/: __init__.py
src/word_prediction/: __init__.py  predictor.py
tests/: requirements-test.txt  requirements-testing.txt  test_predictor.py  test_version.py
word-prediction--kb-bert/: .bumpversion.cfg  Makefile  README.md  pyproject.toml
word-prediction--kb-bert/src/word_prediction/kb_bert/: __init__.py
word-prediction--kb-bert/src/word_prediction_kb_bert/: __init__.py
word-prediction--kb-bert/tests/: conftest.py  test_predictor.py
word-prediction-kb-bert/: .bumpversion.cfg  .bumpversion.toml  CHANGELOG.md  Makefile  README.md  pyproject.toml
word-prediction-kb-bert/src/sbx_word_prediction_kb_bert/: __init__.py  predictor.py
word-prediction-kb-bert/src/word_prediction_kb_bert/: __init__.py  predictor.py
word-prediction-kb-bert/tests/: conftest.py  test_annotations.py  test_predictor.py
