[project]
name = "sparv-sbx-word-prediction-workspace"
dependencies = []
requires-python = ">=3.9"
version = "0.0.0"

[tool.pdm.dev-dependencies]
dev = [
    "-e word-prediction-kb-bert @ file:///${PROJECT_ROOT}/word-prediction-kb-bert",
    "pytest>=8.1.1",
    "pytest-cov>=4.1.0",
    "mypy>=1.9.0",
    "ruff>=0.3.2",
    "bump-my-version>=0.19.0",
]
