[project]
name = "sparv-sbx-word-prediction-kb-bert"
version = "0.6.1"
description = "A sparv plugin for computing word neighbours using a BERT model."
authors = [
    { name = "Kristoffer Andersson", email = "kristoffer.andersson@gu.se" },
]
dependencies = [
    "sparv-pipeline >=5.2.0",
    "transformers>=4.34.1",
    "torch>=2.3.1",
]
license = "MIT"
readme = "README.md"
requires-python = ">= 3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    # "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Unix",
    "Operating System :: POSIX",
    # "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    # "Programming Language :: Python :: 3.12", TODO: fix this
    "Programming Language :: Python :: Implementation :: CPython",
    # "uncomment if you test on these interpreters:",
    # "Programming Language :: Python :: Implementation :: IronPython",
    # "Programming Language :: Python :: Implementation :: Jython",
    # "Programming Language :: Python :: Implementation :: Stackless",
    "Topic :: Utilities",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.entry-points."sparv.plugin"]
sbx_word_prediction_kb_bert = "sbx_word_prediction_kb_bert"

[project.urls]
Homepage = "https://spraakbanken.gu.se"
Repository = "https://github.com/spraakbanken/sparv-sbx-word-prediction"
"Bug Tracker" = "https://github.com/spraakbanken/sparv-sbx-word-prediction/labels/project%3Aword-prediction--kb-bert"

[tool.hatch.build.targets.sdist]
exclude = ["/.github", "/docs"]

[tool.hatch.build.targets.wheel]
packages = ["src/sbx_word_prediction_kb_bert"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv.sources]
sparv-pipeline-testing = { git = "https://github.com/spraakbanken/sparv-pipeline-testing.git", rev = "v0.1.7" }

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "sparv-pipeline-testing",
    "syrupy>=4.7.2",
]
